--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 </head>
 
@@ -82,7 +83,7 @@
             </div>
             <div class="container" style="margin-top: 90px;">
                 <div class="row">
-                    <div class="col-md-12">
+                    <div data-aos-duration="1000" data-aos="fade-up" class="col-md-12">
                         <span class="subtitle sub-title">Features</span>
                         <h2 style=" font-size: 60px;
                         font-weight: 700;
@@ -93,9 +94,9 @@
                         </h2>
                     </div>
                 </div>
-                <div class="row" style="display: flex; justify-content: space-between; margin-top: 30px;">
-                    <div class="col-md-3 boxx" >
-                    
+                <div class="row" style="display: flex; justify-content: space-between; margin-top: 30px;" data-aos-duration="1500" data-aos="fade-up">
+                    <div class="col-md-3 boxx">
+
                         <div class="inner" style="padding: 30px;">
                             <div class="icon icon-box">
                                 <svg style="    width: 50px;
@@ -104,9 +105,9 @@
                                 stroke-width: 1 !important;
                                 font-size: 50px;
                                 font-weight: 400;
-                                stroke: var(--color-primary); margin-bottom: 20px;" xmlns="http://www.w3.org/2000/svg" width="24"
-                                    height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1"
-                                    stroke-linecap="round" stroke-linejoin="round"
+                                stroke: var(--color-primary); margin-bottom: 20px;" xmlns="http://www.w3.org/2000/svg"
+                                    width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                    stroke-width="1" stroke-linecap="round" stroke-linejoin="round"
                                     class="feather feather-align-justify">
                                     <line x1="21" y1="10" x2="3" y2="10"></line>
                                     <line x1="21" y1="6" x2="3" y2="6"></line>
@@ -137,14 +138,12 @@
                                 stroke-width: 1 !important;
                                 font-size: 50px;
                                 font-weight: 400;
-                                stroke: var(--color-primary); margin-bottom: 20px;" xmlns="http://www.w3.org/2000/svg" width="24"
-                                    height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1"
-                                    stroke-linecap="round" stroke-linejoin="round"
-                                    class="feather feather-align-justify">
-                                    <line x1="21" y1="10" x2="3" y2="10"></line>
-                                    <line x1="21" y1="6" x2="3" y2="6"></line>
-                                    <line x1="21" y1="14" x2="3" y2="14"></line>
-                                    <line x1="21" y1="18" x2="3" y2="18"></line>
+                                stroke: var(--color-primary); margin-bottom: 20px;" xmlns="http://www.w3.org/2000/svg"
+                                    width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                    stroke-width="1" stroke-linecap="round" stroke-linejoin="round"
+                                    class="feather feather-book-open">
+                                    <path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path>
+                                    <path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path>
                                 </svg>
                             </div>
                             <div class="content">
@@ -154,7 +153,7 @@
                                     line-height: 32px;
                                     margin-bottom: 20px;
                                     color:#dbe5f4;   box-shadow: none;
-                                    text-decoration: none;" href="#">Business Stratagy</a></h4>
+                                    text-decoration: none;" href="#">App Development</a></h4>
                                 <p class="description1"> I throw myself down among the tall grass by the stream as Ilie
                                     close to the earth.</p>
                                 <a class="read-more-button" href="#"><i class="feather-arrow-right"></i></a>
@@ -170,14 +169,12 @@
                                 stroke-width: 1 !important;
                                 font-size: 50px;
                                 font-weight: 400;
-                                stroke: var(--color-primary); margin-bottom: 20px;" xmlns="http://www.w3.org/2000/svg" width="24"
-                                    height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1"
-                                    stroke-linecap="round" stroke-linejoin="round"
-                                    class="feather feather-align-justify">
-                                    <line x1="21" y1="10" x2="3" y2="10"></line>
-                                    <line x1="21" y1="6" x2="3" y2="6"></line>
-                                    <line x1="21" y1="14" x2="3" y2="14"></line>
-                                    <line x1="21" y1="18" x2="3" y2="18"></line>
+                                stroke: var(--color-primary); margin-bottom: 20px;" xmlns="http://www.w3.org/2000/svg"
+                                    width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                    stroke-width="1" stroke-linecap="round" stroke-linejoin="round"
+                                    class="feather feather-tv">
+                                    <rect x="2" y="7" width="20" height="15" rx="2" ry="2"></rect>
+                                    <polyline points="17 2 12 7 7 2"></polyline>
                                 </svg>
                             </div>
                             <div class="content">
@@ -195,7 +192,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row" style="display: flex; justify-content: space-between; margin-top: 50px;" >
+                <div class="row" style="display: flex; justify-content: space-between; margin-top: 50px;" data-aos-duration="1500" data-aos="fade-up">
                     <div class="col-md-3 boxx">
                         <div class="inner" style="padding: 30px;">
                             <div class="icon icon-box">
@@ -205,14 +202,12 @@
                                 stroke-width: 1 !important;
                                 font-size: 50px;
                                 font-weight: 400;
-                                stroke: var(--color-primary); margin-bottom: 20px;" xmlns="http://www.w3.org/2000/svg" width="24"
-                                    height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1"
-                                    stroke-linecap="round" stroke-linejoin="round"
-                                    class="feather feather-align-justify">
-                                    <line x1="21" y1="10" x2="3" y2="10"></line>
-                                    <line x1="21" y1="6" x2="3" y2="6"></line>
-                                    <line x1="21" y1="14" x2="3" y2="14"></line>
-                                    <line x1="21" y1="18" x2="3" y2="18"></line>
+                                stroke: var(--color-primary); margin-bottom: 20px;" xmlns="http://www.w3.org/2000/svg"
+                                    width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                    stroke-width="1" stroke-linecap="round" stroke-linejoin="round"
+                                    class="feather feather-smartphone">
+                                    <rect x="5" y="2" width="14" height="20" rx="2" ry="2"></rect>
+                                    <line x1="12" y1="18" x2="12.01" y2="18"></line>
                                 </svg>
                             </div>
                             <div class="content">
@@ -222,7 +217,7 @@
                                     line-height: 32px;
                                     margin-bottom: 20px;
                                     color:#dbe5f4;   box-shadow: none;
-                                    text-decoration: none;" href="#">Business Stratagy</a></h4>
+                                    text-decoration: none;" href="#">Mobile App</a></h4>
                                 <p class="description1"> I throw myself down among the tall grass by the stream as Ilie
                                     close to the earth.</p>
                                 <a class="read-more-button" href="#"><i class="feather-arrow-right"></i></a>
@@ -238,14 +233,12 @@
                                 stroke-width: 1 !important;
                                 font-size: 50px;
                                 font-weight: 400;
-                                stroke: var(--color-primary); margin-bottom: 20px;" xmlns="http://www.w3.org/2000/svg" width="24"
-                                    height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1"
-                                    stroke-linecap="round" stroke-linejoin="round"
-                                    class="feather feather-align-justify">
-                                    <line x1="21" y1="10" x2="3" y2="10"></line>
-                                    <line x1="21" y1="6" x2="3" y2="6"></line>
-                                    <line x1="21" y1="14" x2="3" y2="14"></line>
-                                    <line x1="21" y1="18" x2="3" y2="18"></line>
+                                stroke: var(--color-primary); margin-bottom: 20px;" xmlns="http://www.w3.org/2000/svg"
+                                    width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                    stroke-width="1" stroke-linecap="round" stroke-linejoin="round">
+                                    <ellipse cx="12" cy="5" rx="9" ry="3"></ellipse>
+                                    <path d="M21 12c0 1.66-4 3-9 3s-9-1.34-9-3"></path>
+                                    <path d="M3 5v14c0 1.66 4 3 9 3s9-1.34 9-3V5"></path>
                                 </svg>
                             </div>
                             <div class="content">
@@ -255,14 +248,14 @@
                                     line-height: 32px;
                                     margin-bottom: 20px;
                                     color:#dbe5f4;   box-shadow: none;
-                                    text-decoration: none;" href="#">Business Stratagy</a></h4>
+                                    text-decoration: none;" href="#">SEO Optimisation</a></h4>
                                 <p class="description1"> I throw myself down among the tall grass by the stream as Ilie
                                     close to the earth.</p>
                                 <a class="read-more-button" href="#"><i class="feather-arrow-right"></i></a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3 boxx" >
+                    <div class="col-md-3 boxx">
                         <div class="inner" style="padding: 30px;">
                             <div class="icon icon-box">
                                 <svg style="    width: 50px;
@@ -271,14 +264,15 @@
                                 stroke-width: 1 !important;
                                 font-size: 50px;
                                 font-weight: 400;
-                                stroke: var(--color-primary); margin-bottom: 20px;" xmlns="http://www.w3.org/2000/svg" width="24"
-                                    height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1"
-                                    stroke-linecap="round" stroke-linejoin="round"
-                                    class="feather feather-align-justify">
-                                    <line x1="21" y1="10" x2="3" y2="10"></line>
-                                    <line x1="21" y1="6" x2="3" y2="6"></line>
-                                    <line x1="21" y1="14" x2="3" y2="14"></line>
-                                    <line x1="21" y1="18" x2="3" y2="18"></line>
+                                stroke: var(--color-primary); margin-bottom: 20px;" xmlns="http://www.w3.org/2000/svg"
+                                    width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                    stroke-width="1" stroke-linecap="round" stroke-linejoin="round"
+                                    class="feather feather-codepen">
+                                    <polygon points="12 2 22 8.5 22 15.5 12 22 2 15.5 2 8.5 12 2"></polygon>
+                                    <line x1="12" y1="22" x2="12" y2="15.5"></line>
+                                    <polyline points="22 8.5 12 15.5 2 8.5"></polyline>
+                                    <polyline points="2 15.5 12 8.5 22 15.5"></polyline>
+                                    <line x1="12" y1="2" x2="12" y2="8.5"></line>
                                 </svg>
                             </div>
                             <div class="content">
@@ -288,7 +282,7 @@
                                     line-height: 32px;
                                     margin-bottom: 20px;
                                     color:#dbe5f4;   box-shadow: none;
-                                    text-decoration: none;" href="#">Business Stratagy</a></h4>
+                                    text-decoration: none;" href="#">UX Consulting</a></h4>
                                 <p class="description1"> I throw myself down among the tall grass by the stream as Ilie
                                     close to the earth.</p>
                                 <a class="read-more-button" href="#"><i class="feather-arrow-right"></i></a>
@@ -302,6 +296,10 @@
 
     <!-- Navigation bar end -->
 
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
