--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                 <div class="box">
                                     <div class="bx">one</div>
                                     <div class="bx">two</div>
-                                    <div style="margin-right: 2px;" class="bx">three</div>
+                                    <div class="bx">three</div>
                                 </div>
 
                             </div>
