--- a/index.html
+++ b/index.html
@@ -33,8 +33,37 @@
         </ul>
     </nav> -->
 
-    <div class="static-slider1 py-4">
-        <div class="container">
+    <!-- nav start -->
+    
+    <nav class="nav">
+        <div class="container2">
+            <div class="logo">
+                <a href="#">Kuldip</a>
+            </div>
+            <div class="main_list" id="mainListDiv">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#" >Features</a></li>
+                    <li><a href="#">my work</a></li>
+                    <li><a href="#">disegn</a></li>
+                    <li><a href="#">dcontact</a></li>
+                </ul>
+            </div>
+            <div class="media_button">
+                <button class="main_media_button" id="mediaButton">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
+            </div>
+        </div>
+    </nav>
+
+    <!-- nav end -->
+
+    <div class="static-slider1 py-4" >
+
+        <div class="container" style="padding-top:50px;">
             <!-- Row  -->
             <div class="row">
                 <!-- Column -->
@@ -77,10 +106,10 @@
                 </div>
                 <!-- Column -->
                 <div class="col-md-5 mt-4">
-                    <img src="https://www.wrappixel.com/demos/ui-kit/wrapkit/assets/images/sliders/static-slider/slider1/img1.png"
-                        alt="wrapkit" class="img-fluid" />
+                    <img src="banner-01.png" alt="wrapkit" class="img-fluid" />
                 </div>
             </div>
+            <hr>
             <div class="container" style="margin-top: 90px;">
                 <div class="row">
                     <div data-aos-duration="1000" data-aos="fade-up" class="col-md-12">
@@ -94,7 +123,8 @@
                         </h2>
                     </div>
                 </div>
-                <div class="row" style="display: flex; justify-content: space-between; margin-top: 30px;" data-aos-duration="1500" data-aos="fade-up">
+                <div class="row" style="display: flex; justify-content: space-between; margin-top: 30px;"
+                    data-aos-duration="1500" data-aos="fade-up">
                     <div class="col-md-3 boxx">
 
                         <div class="inner" style="padding: 30px;">
@@ -192,7 +222,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="row" style="display: flex; justify-content: space-between; margin-top: 50px;" data-aos-duration="1500" data-aos="fade-up">
+                <div class="row"
+                    style="display: flex; justify-content: space-between; margin-top: 50px; margin-bottom: 90px;"
+                    data-aos-duration="1500" data-aos="fade-up">
                     <div class="col-md-3 boxx">
                         <div class="inner" style="padding: 30px;">
                             <div class="icon icon-box">
@@ -290,15 +322,133 @@
                         </div>
                     </div>
                 </div>
+                <hr>
+                <div class="row" style="margin-top: 90px;">
+                    <div class="col-md-12">
+                        <div class="section-title text-center aos-init aos-animate" data-aos-duration="1500"
+                            data-aos="fade-up">
+                            <span class="subtitle sub-title">Visit my portfolio and keep your feedback</span>
+                            <h2 class="title sec-title">My Portfolio</h2>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- project section -->
+
+
+                <div class="card-list">
+                    <a href="#" class="card-item" data-aos="fade-down" data-aos-duration="1500">
+                        <img src="img1.jpg" alt="Card Image">
+                        <span class="developer">Gallery</span>
+                        <h3>A "developer" codes software and websites.</h3>
+                        <div class="arrow">
+                            <i class="fas fa-arrow-right card-icon"></i>
+                        </div>
+                    </a>
+                    <a href="#" class="card-item" data-aos="fade-down" data-aos-duration="1500">
+                        <img src="img2.jpg" alt="Card Image">
+                        <span class="designer">Video</span>
+                        <h3>A "designer" is a design expert.</h3>
+                        <div class="arrow">
+                            <i class="fas fa-arrow-right card-icon"></i>
+                        </div>
+                    </a>
+                    <a href="#" class="card-item" data-aos="fade-down" data-aos-duration="1500">
+                        <img src="img3.jpg" alt="Card Image">
+                        <span class="editor">External link</span>
+                        <h3>An "editor" ensures content quality and accuracy.</h3>
+                        <div class="arrow">
+                            <i class="fas fa-arrow-right card-icon"></i>
+                        </div>
+                    </a>
+                </div>
+                <div class="card-list" style="margin-bottom:100px;">
+                    <a href="#" class="card-item" data-aos="fade-up" data-aos-duration="1000">
+                        <img src="img4.jpg" alt="Card Image">
+                        <span class="developer">Gallery</span>
+                        <h3>A "developer" codes software and websites.</h3>
+                        <div class="arrow">
+                            <i class="fas fa-arrow-right card-icon"></i>
+                        </div>
+                    </a>
+                    <a href="#" class="card-item" data-aos="fade-up" data-aos-duration="1000">
+                        <img src="img5.jpg" alt="Card Image">
+                        <span class="designer">Video</span>
+                        <h3>A "designer" is a design expert.</h3>
+                        <div class="arrow">
+                            <i class="fas fa-arrow-right card-icon"></i>
+                        </div>
+                    </a>
+                    <a href="#" class="card-item" data-aos="fade-up" data-aos-duration="1000">
+                        <img src="img6.jpg" alt="Card Image">
+                        <span class="editor">External link</span>
+                        <h3>An "editor" ensures content quality and accuracy.</h3>
+                        <div class="arrow">
+                            <i class="fas fa-arrow-right card-icon"></i>
+                        </div>
+                    </a>
+                </div>
+
+                <!-- end project section -->
+
+                <hr>
+                <!-- Contact US -->
+                <div class="row">
+                    <div data-aos-duration="1000" data-aos="fade-up" class="col-md-12">
+                        <h2 style=" font-size: 60px;
+                        font-weight: 700;
+                        line-height: 1.2;
+                        color: var(--color-lightn);
+                        margin-top: 55px;
+                        margin-bottom: 0;" class="title sec-title">Contact Us
+                        </h2>
+                    </div>
+                </div>
+                <div class="container1" style="margin-top:10px;">
+                    <form action="action_page.php">
+
+                        <label for="fname">First Name</label>
+                        <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+                        <label for="lname">Last Name</label>
+                        <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+
+                        <label for="country">Country</label>
+                        <select id="country" name="country">
+                            <option value="australia">India</option>
+                            <option value="australia">Australia</option>
+                            <option value="canada">Canada</option>
+                            <option value="usa">USA</option>
+                        </select>
+
+                        <label for="subject">Subject</label>
+                        <textarea id="subject" name="subject" placeholder="Write something.."
+                            style="height:200px"></textarea>
+
+                        <input type="submit" value="Submit">
+                    </form>
+                </div>
             </div>
         </div>
     </div>
 
-    <!-- Navigation bar end -->
 
+    <script>
+        var mainListDiv = document.getElementById("mainListDiv"),
+            mediaButton = document.getElementById("mediaButton");
+
+        mediaButton.onclick = function () {
+
+            "use strict";
+
+            mainListDiv.classList.toggle("show_list");
+            mediaButton.classList.toggle("active");
+
+        };
+    </script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
-      AOS.init();
+        AOS.init();
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
