--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <nav class="nav">
         <div class="container2">
             <div class="logo">
-                <a href="#">Kuldip</a>
+                <a href="#">Aniket</a>
             </div>
             <div class="main_list" id="mainListDiv">
                 <ul>
@@ -69,7 +69,7 @@
                 <!-- Column -->
                 <div class="col-md-7 align-self-center">
                     <span class="subtitle">Welcome to my world</span>
-                    <h1 class="title">Hi, I’m <span style="color: #ff014f;">Kuldip</span><br>
+                    <h1 class="title">Hi, I’m <span style="color: #ff014f;">Aniket</span><br>
                         <span class="text-success-gradiant typewrite" data-period="2000"
                             data-type='[ "a Developer", "The Coder"]'></span>
                     </h1>
